partiql/tests/snapshots/pretty__graph_simplified_8.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT * FROM (g MATCH <-/ edge+ fin  /-> )
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH <-/ edge+ fin /->)

------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH <-/ edge+ fin /->)

--------------------------------------------------------------------------------
SELECT * FROM (g MATCH <-/ edge+ fin /->)

----------------------------------------
SELECT *
FROM (g MATCH <-/ edge+ fin /->)

------------------------------
SELECT *
FROM (g MATCH <-/ edge+ fin /->)

--------------------
SELECT *
FROM (g MATCH <-/ edge+ fin /->)

----------
SELECT *
FROM (g MATCH <-/ edge+ fin /->)
