partiql/tests/snapshots/pretty__graph_simplified_9.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT * FROM (g MATCH -/ start !(intermediate other){2,3} fin  /- )
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH -/ start !(intermediate other){2,3} fin /-)

------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH -/ start !(intermediate other){2,3} fin /-)

--------------------------------------------------------------------------------
SELECT * FROM (g MATCH -/ start !(intermediate other){2,3} fin /-)

----------------------------------------
SELECT *
FROM (g MATCH -/ start !(intermediate other){2,3} fin /-)

------------------------------
SELECT *
FROM (g MATCH -/ start !(intermediate other){2,3} fin /-)

--------------------
SELECT *
FROM (g MATCH -/ start !(intermediate other){2,3} fin /-)

----------
SELECT *
FROM (g MATCH -/ start !(intermediate other){2,3} fin /-)
