partiql/tests/snapshots/pretty__graph_union_1.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
(MyGraph MATCH (x)) UNION SELECT * FROM tbl1
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
(MyGraph MATCH (x))
UNION
(SELECT * FROM tbl1)

------------------------------------------------------------------------------------------------------------------------
(MyGraph MATCH (x))
UNION
(SELECT * FROM tbl1)

--------------------------------------------------------------------------------
(MyGraph MATCH (x))
UNION
(SELECT * FROM tbl1)

----------------------------------------
(MyGraph MATCH (x))
UNION
(SELECT * FROM tbl1)

------------------------------
(MyGraph MATCH (x))
UNION
(SELECT * FROM tbl1)

--------------------
(MyGraph MATCH (x))
UNION
(SELECT * FROM tbl1)

----------
(MyGraph MATCH (x))
UNION
(SELECT *
  FROM tbl1)
