partiql/tests/snapshots/pretty__graph_union_2.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT * FROM tbl1 UNION (MyGraph MATCH (x))
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
(SELECT * FROM tbl1)
UNION
((MyGraph MATCH (x)))

------------------------------------------------------------------------------------------------------------------------
(SELECT * FROM tbl1)
UNION
((MyGraph MATCH (x)))

--------------------------------------------------------------------------------
(SELECT * FROM tbl1)
UNION
((MyGraph MATCH (x)))

----------------------------------------
(SELECT * FROM tbl1)
UNION
((MyGraph MATCH (x)))

------------------------------
(SELECT * FROM tbl1)
UNION
((MyGraph MATCH (x)))

--------------------
(SELECT * FROM tbl1)
UNION
((MyGraph MATCH (x)))

----------
(SELECT *
  FROM tbl1)
UNION
((MyGraph MATCH (x)))
