partiql/tests/snapshots/pretty__having_limit_offset.snap
---
source: partiql-ast/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT a FROM foo GROUP BY a HAVING a > 2 ORDER BY a LIMIT 1 OFFSET 1
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT a FROM foo GROUP BY a HAVING (a > 2) ORDER BY a LIMIT 1 OFFSET 1

------------------------------------------------------------------------------------------------------------------------
SELECT a FROM foo GROUP BY a HAVING (a > 2) ORDER BY a LIMIT 1 OFFSET 1

--------------------------------------------------------------------------------
SELECT a FROM foo GROUP BY a HAVING (a > 2) ORDER BY a LIMIT 1 OFFSET 1

----------------------------------------
SELECT a FROM foo GROUP BY a
HAVING (a > 2) ORDER BY a LIMIT 1
OFFSET 1

------------------------------
SELECT a FROM foo GROUP BY a
HAVING (a > 2) ORDER BY a
LIMIT 1 OFFSET 1

--------------------
SELECT a FROM foo
GROUP BY a
HAVING (a > 2)
ORDER BY a LIMIT 1
OFFSET 1

----------
SELECT a
FROM foo
GROUP BY a
HAVING (a > 2)
ORDER BY a
LIMIT 1
OFFSET 1
