partiql/tests/snapshots/pretty__pretty_exclude_2.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================

                    SELECT * EXCLUDE t.a.b.c[0], t.a.b.c[1].field
                    FROM [{
                        'a': {
                        'b': {
                        'c': [
                        {
                        'field': 0    -- c[0]
                        },
                        {
                        'field': 1    -- c[1]
                        },
                        {
                        'field': 2    -- c[2]
                        }
                        ]
                        }
                        },
                        'foo': 'bar'
                        }] AS t
                
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT * EXCLUDE t.a.b.c[0], t.a.b.c[1].field FROM [ { 'a': { 'b': { 'c': [ { 'field': 0 }, { 'field': 1 }, { 'field': 2 } ] } }, 'foo': 'bar' } ] AS t

------------------------------------------------------------------------------------------------------------------------
SELECT * EXCLUDE t.a.b.c[0], t.a.b.c[1].field FROM [
    { 'a': { 'b': { 'c': [ { 'field': 0 }, { 'field': 1 }, { 'field': 2 } ] } }, 'foo': 'bar' }
  ] AS t

--------------------------------------------------------------------------------
SELECT * EXCLUDE t.a.b.c[0], t.a.b.c[1].field FROM [
    {
      'a': { 'b': { 'c': [ { 'field': 0 }, { 'field': 1 }, { 'field': 2 } ] } },
      'foo': 'bar'
    }
  ] AS t

----------------------------------------
SELECT * EXCLUDE t.a.b.c[0],
  t.a.b.c[1].field
FROM [
    {
      'a': {
        'b': {
          'c': [
            { 'field': 0 },
            { 'field': 1 },
            { 'field': 2 }
          ]
        }
      },
      'foo': 'bar'
    }
  ] AS t

------------------------------
SELECT * EXCLUDE t.a.b.c[0],
  t.a.b.c[1].field
FROM [
    {
      'a': {
        'b': {
          'c': [
            { 'field': 0 },
            { 'field': 1 },
            { 'field': 2 }
          ]
        }
      },
      'foo': 'bar'
    }
  ] AS t

--------------------
SELECT *
EXCLUDE t.a.b.c[0],
  t.a.b.c[1].field
FROM [
    {
      'a': {
        'b': {
          'c': [
            {
              'field': 0
            },
            {
              'field': 1
            },
            {
              'field': 2
            }
          ]
        }
      },
      'foo': 'bar'
    }
  ] AS t

----------
SELECT *
EXCLUDE t.a.b.c[0],
  t.a.b.c[1].field
FROM [
    {
      'a': {
        'b': {
          'c': [
            {
              'field': 0
            },
            {
              'field': 1
            },
            {
              'field': 2
            }
          ]
        }
      },
      'foo': 'bar'
    }
  ] AS t
