partiql/tests/snapshots/pretty__pretty_exclude_3.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================

                SELECT *
                    EXCLUDE
                t.a.b.c[*].field_x
                FROM [{
                    'a': {
                        'b': {
                            'c': [
                            {                    -- c[0]
                                'field_x': 0,
                                'field_y': 0
                            },
                            {                    -- c[1]
                                'field_x': 1,
                                'field_y': 1
                            },
                            {                    -- c[2]
                                'field_x': 2,
                                'field_y': 2
                            }
                            ]
                        }
                    },
                    'foo': 'bar'
                }] AS t
                
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT * EXCLUDE t.a.b.c[*].field_x FROM [
    { 'a': { 'b': { 'c': [ { 'field_x': 0, 'field_y': 0 }, { 'field_x': 1, 'field_y': 1 }, { 'field_x': 2, 'field_y': 2 } ] } }, 'foo': 'bar' }
  ] AS t

------------------------------------------------------------------------------------------------------------------------
SELECT * EXCLUDE t.a.b.c[*].field_x FROM [
    {
      'a': {
        'b': { 'c': [ { 'field_x': 0, 'field_y': 0 }, { 'field_x': 1, 'field_y': 1 }, { 'field_x': 2, 'field_y': 2 } ] }
      },
      'foo': 'bar'
    }
  ] AS t

--------------------------------------------------------------------------------
SELECT * EXCLUDE t.a.b.c[*].field_x FROM [
    {
      'a': {
        'b': {
          'c': [
            { 'field_x': 0, 'field_y': 0 },
            { 'field_x': 1, 'field_y': 1 },
            { 'field_x': 2, 'field_y': 2 }
          ]
        }
      },
      'foo': 'bar'
    }
  ] AS t

----------------------------------------
SELECT * EXCLUDE t.a.b.c[*].field_x
FROM [
    {
      'a': {
        'b': {
          'c': [
            { 'field_x': 0, 'field_y': 0
            },
            { 'field_x': 1, 'field_y': 1
            },
            { 'field_x': 2, 'field_y': 2
            }
          ]
        }
      },
      'foo': 'bar'
    }
  ] AS t

------------------------------
SELECT *
EXCLUDE t.a.b.c[*].field_x
FROM [
    {
      'a': {
        'b': {
          'c': [
            {
              'field_x': 0,
              'field_y': 0
            },
            {
              'field_x': 1,
              'field_y': 1
            },
            {
              'field_x': 2,
              'field_y': 2
            }
          ]
        }
      },
      'foo': 'bar'
    }
  ] AS t

--------------------
SELECT *
EXCLUDE t.a.b.c[*].field_x
FROM [
    {
      'a': {
        'b': {
          'c': [
            {
              'field_x': 0,
              'field_y': 0
            },
            {
              'field_x': 1,
              'field_y': 1
            },
            {
              'field_x': 2,
              'field_y': 2
            }
          ]
        }
      },
      'foo': 'bar'
    }
  ] AS t

----------
SELECT *
EXCLUDE t.a.b.c[*].field_x
FROM [
    {
      'a': {
        'b': {
          'c': [
            {
              'field_x': 0,
              'field_y': 0
            },
            {
              'field_x': 1,
              'field_y': 1
            },
            {
              'field_x': 2,
              'field_y': 2
            }
          ]
        }
      },
      'foo': 'bar'
    }
  ] AS t
