partiql/tests/snapshots/pretty__pretty_insert_bag.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
INSERT INTO t << {'a': 1}, {'a': 2} >>
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
INSERT INTO t << { 'a': 1 }, { 'a': 2 } >>

------------------------------------------------------------------------------------------------------------------------
INSERT INTO t << { 'a': 1 }, { 'a': 2 } >>

--------------------------------------------------------------------------------
INSERT INTO t << { 'a': 1 }, { 'a': 2 } >>

----------------------------------------
INSERT INTO t <<
  { 'a': 1 },
  { 'a': 2 }
>>

------------------------------
INSERT INTO t <<
  { 'a': 1 },
  { 'a': 2 }
>>

--------------------
INSERT INTO t <<
  { 'a': 1 },
  { 'a': 2 }
>>

----------
INSERT INTO t
<<
  {
    'a': 1
  },
  {
    'a': 2
  }
>>
