partiql/tests/snapshots/pretty__pretty_insert_select.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
INSERT INTO t SELECT a, b FROM src WHERE a > 1
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
INSERT INTO t SELECT a, b FROM src WHERE (a > 1)

------------------------------------------------------------------------------------------------------------------------
INSERT INTO t SELECT a, b FROM src WHERE (a > 1)

--------------------------------------------------------------------------------
INSERT INTO t SELECT a, b FROM src WHERE (a > 1)

----------------------------------------
INSERT INTO t SELECT a, b FROM src
WHERE (a > 1)

------------------------------
INSERT INTO t SELECT a, b
FROM src WHERE (a > 1)

--------------------
INSERT INTO t
SELECT a, b FROM src
WHERE (a > 1)

----------
INSERT INTO t
SELECT a,
  b
FROM src
WHERE (a > 1)
